# serializer version: 1
# name: TestRegressionOutputs.test_rf_regressor_copula_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.85583  |  -0.032878 |  -0.306709 |    0.007378 |    -0.055948 |  -0.11734  |  -0.114414 |   -0.042057 |
      |  2 |            2 | 2.20594 | -0.558874 |  -0.034955 |  -0.334904 |   -0.102872 |    -0.046278 |  -0.036868 |  -0.077401 |   -0.036955 |
      |  3 |            3 | 2.20594 |  0.482356 |   0.535189 |  -0.095172 |   -0.03541  |     0.051559 |   0.83279  |  -0.001148 |    0.177005 |
      |  4 |            4 | 2.20594 |  0.388952 |  -0.011356 |   0.180825 |    0.047697 |    -0.009125 |  -0.173856 |   0.040927 |    0.013259 |
      |  5 |            5 | 2.20594 | -0.079581 |  -0.07282  |   0.047645 |    0.06045  |     0.065682 |   0.063883 |   0.001512 |    0.047372 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.00856  |   0.009918 |   0.016191 |    0.012511 |     0.014036 |   0.006358 |   0.018371 |    0.013708 |
      |  2 |            2 |      0 | 0.009251 |   0.007711 |   0.011743 |    0.013982 |     0.010883 |   0.006858 |   0.013155 |    0.011506 |
      |  3 |            3 |      0 | 0.028634 |   0.031367 |   0.054919 |    0.040469 |     0.034424 |   0.017827 |   0.049919 |    0.055463 |
      |  4 |            4 |      0 | 0.009294 |   0.012    |   0.013365 |    0.012692 |     0.009624 |   0.005873 |   0.013801 |    0.017677 |
      |  5 |            5 |      0 | 0.014997 |   0.016361 |   0.030583 |    0.027878 |     0.025059 |   0.010887 |   0.034085 |    0.034355 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_ctree_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.948319 |   0.05185  |  -0.287684 |   -0.0866   |    -0.034557 |  -0.195393 |  -0.36086  |    0.343765 |
      |  2 |            2 | 2.20594 | -0.366948 |  -0.006291 |  -0.503678 |    0.020885 |    -0.003139 |  -0.044191 |  -0.112869 |   -0.212877 |
      |  3 |            3 | 2.20594 |  0.376875 |   0.657434 |  -0.002444 |   -0.006484 |    -0.059767 |   0.826349 |  -0.005228 |    0.160433 |
      |  4 |            4 | 2.20594 |  0.187932 |  -0.120647 |   0.254612 |    0.015121 |    -0.077986 |  -0.193072 |   0.08305  |    0.328312 |
      |  5 |            5 | 2.20594 |  0.339671 |   0.026453 |  -0.227112 |    0.006098 |     0.008067 |   0.137527 |  -0.416485 |    0.259924 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.057147 |   0.056511 |   0.057892 |    0.081205 |     0.048192 |   0.095447 |   0.110833 |    0.07565  |
      |  2 |            2 |      0 | 0.052043 |   0.061648 |   0.061983 |    0.05197  |     0.047134 |   0.047564 |   0.147082 |    0.068782 |
      |  3 |            3 |      0 | 0.052208 |   0.066924 |   0.045199 |    0.066519 |     0.051898 |   0.049494 |   0.101617 |    0.064322 |
      |  4 |            4 |      0 | 0.038229 |   0.051842 |   0.050404 |    0.064145 |     0.048539 |   0.043137 |   0.124024 |    0.083659 |
      |  5 |            5 |      0 | 0.043567 |   0.041053 |   0.059442 |    0.056602 |     0.033751 |   0.046628 |   0.055844 |    0.049585 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.670784 |   0.053594 |  -0.117928 |    0.139035 |    -0.023417 |  -0.270039 |  -0.44211  |   -0.186147 |
      |  2 |            2 | 2.20594 | -0.544962 |  -0.004542 |  -0.419568 |   -0.196432 |     0.027108 |   0.181133 |  -0.225561 |   -0.046283 |
      |  3 |            3 | 2.20594 |  0.293443 |   0.585458 |  -0.060117 |   -0.194981 |     0.068514 |   0.839855 |   0.141759 |    0.273238 |
      |  4 |            4 | 2.20594 |  0.343831 |  -0.069743 |   0.035049 |    0.120263 |    -0.171457 |  -0.116286 |   0.138258 |    0.197407 |
      |  5 |            5 | 2.20594 | -0.36705  |  -0.102798 |  -0.097714 |    0.160553 |     0.133257 |   0.004032 |   0.046089 |    0.357772 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.013548 |   0.011591 |   0.011761 |    0.01268  |     0.010949 |   0.009915 |   0.0104   |    0.009045 |
      |  2 |            2 |      0 | 0.020811 |   0.025234 |   0.022839 |    0.020817 |     0.02336  |   0.018689 |   0.021683 |    0.023111 |
      |  3 |            3 |      0 | 0.016483 |   0.017445 |   0.016352 |    0.016742 |     0.014011 |   0.017054 |   0.017876 |    0.01534  |
      |  4 |            4 |      0 | 0.009327 |   0.008607 |   0.008009 |    0.00824  |     0.00843  |   0.008782 |   0.009958 |    0.007449 |
      |  5 |            5 |      0 | 0.019297 |   0.019047 |   0.021022 |    0.01745  |     0.019957 |   0.015976 |   0.020692 |    0.017768 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_iterative
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.627306 |   0.09253  |  -0.114641 |    0.120985 |    -0.037592 |  -0.278334 |  -0.463118 |   -0.210323 |
      |  2 |            2 | 2.20594 | -0.465253 |   0.008083 |  -0.402017 |   -0.210715 |     0.016394 |   0.129472 |  -0.258417 |   -0.046655 |
      |  3 |            3 | 2.20594 |  0.279506 |   0.6187   |  -0.048402 |   -0.25263  |     0.065442 |   0.838939 |   0.144145 |    0.301468 |
      |  4 |            4 | 2.20594 |  0.362624 |  -0.078354 |   0.018328 |    0.136503 |    -0.174925 |  -0.103185 |   0.141508 |    0.174824 |
      |  5 |            5 | 2.20594 | -0.266174 |  -0.092055 |  -0.102658 |    0.157707 |     0.129156 |  -0.036517 |   0.024008 |    0.320675 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.0178   |   0.019459 |   0.020114 |    0.018231 |     0.021842 |   0.015124 |   0.016799 |    0.021429 |
      |  2 |            2 |      0 | 0.031704 |   0.038688 |   0.028089 |    0.029465 |     0.030437 |   0.021822 |   0.045348 |    0.047699 |
      |  3 |            3 |      0 | 0.022944 |   0.030716 |   0.028751 |    0.025817 |     0.03167  |   0.024366 |   0.022677 |    0.021025 |
      |  4 |            4 |      0 | 0.014949 |   0.013853 |   0.014895 |    0.012657 |     0.017599 |   0.013085 |   0.015176 |    0.019715 |
      |  5 |            5 |      0 | 0.029102 |   0.025423 |   0.025349 |    0.026481 |     0.027845 |   0.02433  |   0.041921 |    0.030042 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_with_causal_ordering
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.27793  |  -0.001288 |  -0.029224 |   -0.000367 |    -0.031044 |  -0.046522 |  -0.119649 |   -0.011776 |
      |  2 |            2 | 2.20594 | -0.538114 |  -0.121814 |  -0.523862 |    0.030419 |    -0.008679 |   0.063537 |  -0.109599 |   -0.020996 |
      |  3 |            3 | 2.20594 | -0.296545 |   0.980538 |   0.677808 |   -0.041094 |    -0.076431 |   0.654617 |   0.016348 |    0.031929 |
      |  4 |            4 | 2.20594 |  0.644793 |  -0.271523 |  -0.030135 |    0.045457 |    -0.004643 |  -0.04137  |   0.043108 |    0.091634 |
      |  5 |            5 | 2.20594 |  0.095625 |  -0.207002 |   0.015375 |    0.040993 |     0.096883 |  -0.071071 |   0.083472 |    0.079869 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.000245 |   0.001081 |   0.001081 |    0.002205 |     0.007511 |   0.003166 |   0.003107 |    0.003742 |
      |  2 |            2 |      0 | 0.000632 |   0.002789 |   0.002789 |    0.005459 |     0.010351 |   0.007401 |   0.006598 |    0.007594 |
      |  3 |            3 |      0 | 0.001925 |   0.0085   |   0.0085   |    0.021102 |     0.027779 |   0.016803 |   0.024167 |    0.023806 |
      |  4 |            4 |      0 | 0.000852 |   0.003763 |   0.003763 |    0.007848 |     0.010306 |   0.010177 |   0.009759 |    0.015112 |
      |  5 |            5 |      0 | 0.001855 |   0.008191 |   0.008191 |    0.023614 |     0.032001 |   0.037669 |   0.022333 |    0.026749 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_empirical_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |         A |         B |         C |
      |---:|-------------:|--------:|----------:|----------:|----------:|
      |  1 |            1 | 2.20594 | -0.594482 | -0.231199 | -0.692116 |
      |  2 |            2 | 2.20594 | -1.25693  | -0.218553 |  0.246372 |
      |  3 |            3 | 2.20594 |  0.957096 |  0.539514 |  0.450559 |
      |  4 |            4 | 2.20594 |  0.212993 | -0.002629 |  0.266958 |
      |  5 |            5 | 2.20594 | -0.477268 |  0.007353 |  0.604058 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   A |   B |   C |
      |---:|-------------:|-------:|----:|----:|----:|
      |  1 |            1 |      0 |  -0 |  -0 |  -0 |
      |  2 |            2 |      0 |  -0 |  -0 |   0 |
      |  3 |            3 |      0 |   0 |   0 |   0 |
      |  4 |            4 |      0 |   0 |  -0 |   0 |
      |  5 |            5 |      0 |  -0 |   0 |   0 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.833239 |  -0.00685  |  -0.360575 |    0.004466 |    -0.097876 |  -0.076885 |  -0.076219 |   -0.07062  |
      |  2 |            2 | 2.20594 | -0.818478 |  -0.019085 |  -0.24768  |   -0.078028 |    -0.053456 |  -0.009557 |   0.014487 |   -0.01731  |
      |  3 |            3 | 2.20594 |  0.465205 |   0.592573 |  -0.147692 |   -0.001813 |     0.033868 |   0.847237 |   0.011282 |    0.14651  |
      |  4 |            4 | 2.20594 |  0.273884 |  -0.041331 |   0.178216 |    0.085273 |     0.019923 |  -0.178807 |   0.083692 |    0.056473 |
      |  5 |            5 | 2.20594 | -0.335658 |  -0.061633 |   0.057132 |    0.116002 |     0.148628 |   0.030318 |   0.071498 |    0.107856 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.027692 |   0.034756 |   0.055687 |    0.05152  |     0.06114  |   0.020118 |   0.060273 |    0.057851 |
      |  2 |            2 |      0 | 0.021748 |   0.023264 |   0.028998 |    0.03918  |     0.039984 |   0.016685 |   0.029734 |    0.034596 |
      |  3 |            3 |      0 | 0.026905 |   0.02816  |   0.037607 |    0.031495 |     0.038883 |   0.020356 |   0.040093 |    0.03154  |
      |  4 |            4 |      0 | 0.012883 |   0.023788 |   0.017081 |    0.00958  |     0.020667 |   0.009138 |   0.016122 |    0.012872 |
      |  5 |            5 |      0 | 0.021935 |   0.024848 |   0.041232 |    0.04063  |     0.031812 |   0.01875  |   0.051633 |    0.041347 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_iterative_low_coalitions
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.707078 |  -0.112962 |  -0.344399 |   -0.182372 |    -0.056102 |  -0.09616  |  -0.003243 |   -0.015482 |
      |  2 |            2 | 2.20594 | -0.737431 |   0.003245 |  -0.335516 |   -0.220719 |    -0.018588 |   0.020957 |   0.035392 |    0.023552 |
      |  3 |            3 | 2.20594 |  0.433173 |   0.633368 |  -0.125845 |   -0.149672 |     0.037793 |   0.917296 |   0.039588 |    0.161469 |
      |  4 |            4 | 2.20594 |  0.268531 |  -0.055773 |   0.100594 |    0.047472 |     0.027433 |  -0.103576 |   0.075617 |    0.117024 |
      |  5 |            5 | 2.20594 | -0.444629 |  -0.060723 |   0.016641 |    0.182013 |     0.083816 |   0.143489 |   0.041058 |    0.172477 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.13943  |   0.148006 |   0.118753 |    0.140853 |     0.066163 |   0.062128 |   0.146076 |    0.052471 |
      |  2 |            2 |      0 | 0.094528 |   0.08111  |   0.107371 |    0.106041 |     0.034058 |   0.093337 |   0.081729 |    0.033177 |
      |  3 |            3 |      0 | 0.063882 |   0.143321 |   0.09936  |    0.249629 |     0.026617 |   0.268339 |   0.095482 |    0.033971 |
      |  4 |            4 |      0 | 0.073387 |   0.08116  |   0.043868 |    0.069228 |     0.042572 |   0.051619 |   0.082913 |    0.021369 |
      |  5 |            5 |      0 | 0.138251 |   0.12497  |   0.13346  |    0.137775 |     0.04336  |   0.046313 |   0.115834 |    0.047341 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_gaussian_with_groups
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |         A |         B |         C |
      |---:|-------------:|--------:|----------:|----------:|----------:|
      |  1 |            1 | 2.20594 | -1.14609  | -0.140303 | -0.231409 |
      |  2 |            2 | 2.20594 | -1.14444  | -0.123672 |  0.03901  |
      |  3 |            3 | 2.20594 |  0.764227 |  0.86848  |  0.314462 |
      |  4 |            4 | 2.20594 |  0.408776 | -0.121427 |  0.189973 |
      |  5 |            5 | 2.20594 | -0.341501 |  0.170574 |  0.30507  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   A |   B |   C |
      |---:|-------------:|-------:|----:|----:|----:|
      |  1 |            1 |      0 |  -0 |  -0 |  -0 |
      |  2 |            2 |      0 |  -0 |  -0 |   0 |
      |  3 |            3 |      0 |   0 |   0 |   0 |
      |  4 |            4 |      0 |   0 |  -0 |   0 |
      |  5 |            5 |      0 |  -0 |   0 |   0 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_independence_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -1.23375  |  -0.059731 |   0.041117 |    0.009426 |    -0.019265 |  -0.13167  |  -0.093653 |   -0.030274 |
      |  2 |            2 | 2.20594 | -0.860562 |  -0.055512 |  -0.124966 |   -0.020752 |    -0.021058 |  -0.040834 |  -0.087057 |   -0.018367 |
      |  3 |            3 | 2.20594 |  0.081687 |   0.639952 |   0.146611 |   -0.005336 |     0.020234 |   0.936151 |   0.007015 |    0.120855 |
      |  4 |            4 | 2.20594 |  0.713789 |  -0.111394 |  -0.077309 |    0.031956 |     0.005166 |  -0.157705 |   0.069768 |    0.003051 |
      |  5 |            5 | 2.20594 |  0.111248 |  -0.06596  |  -0.035085 |    0.026804 |     0.027163 |   0.077796 |  -0.025934 |    0.018109 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.001512 |   0.00177  |   0.001245 |    0.001445 |     0.001463 |   0.00182  |   0.001903 |    0.001396 |
      |  2 |            2 |      0 | 0.001474 |   0.001732 |   0.002034 |    0.003146 |     0.001905 |   0.002353 |   0.005197 |    0.002644 |
      |  3 |            3 |      0 | 0.004786 |   0.007392 |   0.007026 |    0.007507 |     0.006745 |   0.011104 |   0.010781 |    0.010283 |
      |  4 |            4 |      0 | 0.002512 |   0.003407 |   0.004184 |    0.003589 |     0.002568 |   0.004124 |   0.005036 |    0.005975 |
      |  5 |            5 |      0 | 0.00119  |   0.001194 |   0.001256 |    0.001255 |     0.001981 |   0.000749 |   0.002877 |    0.001523 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.574366 |  -0.044443 |  -0.186411 |    0.030007 |    -0.035762 |  -0.269482 |  -0.268036 |   -0.169305 |
      |  2 |            2 | 2.20594 | -0.692874 |  -0.06756  |  -0.269165 |   -0.196651 |    -0.072603 |  -0.087322 |   0.175083 |   -0.018014 |
      |  3 |            3 | 2.20594 |  0.267791 |   0.274395 |   0.060605 |    0.186534 |     0.19789  |   0.795274 |  -0.068745 |    0.233425 |
      |  4 |            4 | 2.20594 |  0.385789 |  -0.096769 |   0.136573 |    0.013672 |    -0.017059 |  -0.200956 |   0.158231 |    0.097842 |
      |  5 |            5 | 2.20594 | -0.425934 |  -0.014822 |  -0.069687 |   -0.017853 |     0.002987 |   0.067157 |   0.286918 |    0.305376 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.056342 |   0.048056 |   0.030273 |    0.032127 |     0.043177 |   0.031018 |   0.073158 |    0.046049 |
      |  2 |            2 |      0 | 0.08576  |   0.0946   |   0.050546 |    0.054872 |     0.084932 |   0.071527 |   0.107534 |    0.083858 |
      |  3 |            3 |      0 | 0.111813 |   0.118664 |   0.07476  |    0.082199 |     0.111053 |   0.094991 |   0.141609 |    0.118797 |
      |  4 |            4 |      0 | 0.016864 |   0.010043 |   0.009768 |    0.010062 |     0.007359 |   0.007604 |   0.018855 |    0.01675  |
      |  5 |            5 |      0 | 0.053658 |   0.041901 |   0.02889  |    0.03158  |     0.038373 |   0.027791 |   0.06799  |    0.047652 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_ranger
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.540872 |   0.288141 |  -0.227084 |    0.003572 |    -0.071671 |  -0.31406  |  -0.295392 |   -0.36043  |
      |  2 |            2 | 2.20594 | -0.216465 |  -0.153481 |  -0.353385 |   -0.108685 |     0.081477 |   0.156195 |  -0.394098 |   -0.240666 |
      |  3 |            3 | 2.20594 |  0.076432 |   0.420688 |   0.036324 |   -0.160298 |     0.350189 |   0.437577 |   0.224326 |    0.56193  |
      |  4 |            4 | 2.20594 |  0.286879 |  -0.146448 |   0.036956 |    0.084537 |    -0.138152 |  -0.098292 |   0.049832 |    0.402011 |
      |  5 |            5 | 2.20594 | -0.011168 |   0.009078 |  -0.161639 |    0.192706 |     0.003946 |   0.090428 |  -0.131094 |    0.141884 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.095033 |   0.090189 |   0.142899 |    0.112183 |     0.113429 |   0.118515 |   0.119314 |    0.161868 |
      |  2 |            2 |      0 | 0.064782 |   0.068405 |   0.089596 |    0.079326 |     0.065751 |   0.088003 |   0.079627 |    0.114132 |
      |  3 |            3 |      0 | 0.1072   |   0.17002  |   0.137563 |    0.173098 |     0.186972 |   0.14878  |   0.122342 |    0.251529 |
      |  4 |            4 |      0 | 0.039052 |   0.034085 |   0.073254 |    0.072515 |     0.037025 |   0.051686 |   0.041062 |    0.090548 |
      |  5 |            5 |      0 | 0.052288 |   0.061002 |   0.112708 |    0.085298 |     0.066419 |   0.067069 |   0.115116 |    0.113818 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_separate_splines
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.704654 |  -0.112216 |  -0.309096 |    0.133233 |    -0.022521 |  -0.366699 |  -0.016893 |   -0.118951 |
      |  2 |            2 | 2.20594 | -0.656257 |  -0.214979 |  -0.334111 |   -0.263251 |    -0.023632 |   0.096725 |   0.134637 |    0.03176  |
      |  3 |            3 | 2.20594 |  0.612558 |   0.659029 |  -0.017249 |   -0.023289 |     0.137571 |   0.445692 |   0.018236 |    0.11462  |
      |  4 |            4 | 2.20594 |  0.528718 |  -0.034015 |   0.135691 |    0.045298 |    -0.000407 |  -0.338298 |   0.052223 |    0.088111 |
      |  5 |            5 | 2.20594 | -0.545408 |  -0.142022 |  -0.095607 |    0.106822 |     0.003492 |   0.298481 |   0.368464 |    0.13992  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.072725 |   0.077477 |   0.054428 |    0.035372 |     0.038667 |   0.025512 |   0.059285 |    0.067666 |
      |  2 |            2 |      0 | 0.069699 |   0.080652 |   0.05764  |    0.038828 |     0.046063 |   0.025612 |   0.059074 |    0.069433 |
      |  3 |            3 |      0 | 0.057234 |   0.086687 |   0.067177 |    0.056506 |     0.071193 |   0.040179 |   0.083587 |    0.09711  |
      |  4 |            4 |      0 | 0.05865  |   0.072792 |   0.042604 |    0.029215 |     0.038406 |   0.020888 |   0.046105 |    0.056667 |
      |  5 |            5 |      0 | 0.024336 |   0.037279 |   0.018593 |    0.015501 |     0.019174 |   0.010204 |   0.026621 |    0.019698 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.880869 |  -0.056518 |  -0.021962 |   -0.041526 |    -0.016466 |  -0.416941 |  -0.05822  |   -0.025297 |
      |  2 |            2 | 2.20594 | -0.72135  |  -0.115633 |  -0.044933 |   -0.084961 |    -0.033689 |  -0.05767  |  -0.119116 |   -0.051756 |
      |  3 |            3 | 2.20594 |  0.19781  |   0.833529 |   0.104944 |    0.19843  |     0.078682 |   0.134692 |   0.278202 |    0.120879 |
      |  4 |            4 | 2.20594 | -0.148199 |   0.02458  |   0.527141 |    0.01806  |     0.007161 |   0.012259 |   0.02532  |    0.011002 |
      |  5 |            5 | 2.20594 |  0.309826 |  -0.040009 |  -0.015547 |   -0.029396 |    -0.011656 |  -0.019954 |  -0.041214 |   -0.017908 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.030492 |   0.026591 |   0.046884 |    0.031505 |     0.045314 |   0.036158 |   0.021513 |    0.035692 |
      |  2 |            2 |      0 | 0.062386 |   0.054404 |   0.095922 |    0.064458 |     0.092711 |   0.073978 |   0.044015 |    0.073025 |
      |  3 |            3 |      0 | 0.145706 |   0.127065 |   0.224032 |    0.150545 |     0.216531 |   0.172781 |   0.102799 |    0.170555 |
      |  4 |            4 |      0 | 0.013261 |   0.011564 |   0.02039  |    0.013702 |     0.019707 |   0.015725 |   0.009356 |    0.015523 |
      |  5 |            5 |      0 | 0.021585 |   0.018824 |   0.033189 |    0.022302 |     0.032078 |   0.025596 |   0.015229 |    0.025267 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_ranger
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.525668 |  -0.006021 |  -0.121958 |    0.054494 |    -0.027586 |  -0.293252 |  -0.330901 |   -0.266905 |
      |  2 |            2 | 2.20594 | -0.266117 |  -0.10463  |  -0.350455 |   -0.103983 |    -0.034466 |   0.19097  |  -0.329616 |   -0.230811 |
      |  3 |            3 | 2.20594 |  0.307894 |   0.523178 |   0.075905 |   -0.380972 |     0.192767 |   0.260822 |   0.286349 |    0.681228 |
      |  4 |            4 | 2.20594 |  0.142159 |  -0.08406  |   0.185096 |    0.115181 |    -0.053268 |  -0.060938 |  -0.014799 |    0.24795  |
      |  5 |            5 | 2.20594 | -0.064615 |  -0.136328 |  -0.121894 |    0.071794 |     0.073679 |   0.176581 |  -0.147867 |    0.282792 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.04103  |   0.031772 |   0.074901 |    0.03719  |     0.041002 |   0.041335 |   0.0329   |    0.054151 |
      |  2 |            2 |      0 | 0.025619 |   0.025959 |   0.054337 |    0.056015 |     0.033846 |   0.03699  |   0.038444 |    0.044883 |
      |  3 |            3 |      0 | 0.054802 |   0.07421  |   0.094125 |    0.101861 |     0.086372 |   0.077986 |   0.064444 |    0.084075 |
      |  4 |            4 |      0 | 0.032227 |   0.029034 |   0.068263 |    0.026455 |     0.027316 |   0.030506 |   0.021811 |    0.045792 |
      |  5 |            5 |      0 | 0.038329 |   0.029684 |   0.056153 |    0.035513 |     0.040918 |   0.030312 |   0.041598 |    0.045114 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_regression_surrogate_ranger_tuned
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.519534 |  -0.00105  |  -0.128349 |    0.05307  |    -0.043463 |  -0.297876 |  -0.309024 |   -0.271572 |
      |  2 |            2 | 2.20594 | -0.263096 |  -0.0989   |  -0.355834 |   -0.107253 |    -0.018124 |   0.174905 |  -0.3341   |   -0.226705 |
      |  3 |            3 | 2.20594 |  0.318672 |   0.530494 |   0.084067 |   -0.420248 |     0.197595 |   0.292063 |   0.307678 |    0.636848 |
      |  4 |            4 | 2.20594 |  0.139601 |  -0.083566 |   0.20155  |    0.092789 |    -0.075498 |  -0.056107 |  -0.002455 |    0.261009 |
      |  5 |            5 | 2.20594 | -0.046829 |  -0.130945 |  -0.117075 |    0.062337 |     0.079815 |   0.183471 |  -0.171115 |    0.274484 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.049694 |   0.034393 |   0.063224 |    0.042955 |     0.050874 |   0.032846 |   0.03408  |    0.06375  |
      |  2 |            2 |      0 | 0.030199 |   0.031499 |   0.054356 |    0.06664  |     0.05232  |   0.025438 |   0.032467 |    0.053389 |
      |  3 |            3 |      0 | 0.074654 |   0.090193 |   0.095602 |    0.130436 |     0.164186 |   0.06669  |   0.070491 |    0.116277 |
      |  4 |            4 |      0 | 0.041367 |   0.031409 |   0.062118 |    0.031723 |     0.029919 |   0.027851 |   0.022846 |    0.051035 |
      |  5 |            5 |      0 | 0.036145 |   0.029388 |   0.03753  |    0.044637 |     0.049869 |   0.024364 |   0.033113 |    0.04857  |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_rf_regressor_vaeac_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.911187 |  -0.063618 |  -0.233452 |    0.048069 |    -0.051591 |  -0.276791 |  -0.082853 |    0.053625 |
      |  2 |            2 | 2.20594 | -0.6329   |  -0.066134 |  -0.234123 |   -0.136845 |    -0.068172 |  -0.039521 |  -0.047788 |   -0.003625 |
      |  3 |            3 | 2.20594 |  0.504351 |   0.441483 |   0.019428 |   -0.115457 |     0.00256  |   0.998042 |  -0.05534  |    0.152102 |
      |  4 |            4 | 2.20594 |  0.515471 |  -0.064975 |   0.100552 |    0.014562 |    -0.039815 |  -0.202868 |   0.091924 |    0.06247  |
      |  5 |            5 | 2.20594 |  0.112816 |  -0.151657 |  -0.03502  |    0.049769 |     0.018632 |   0.133543 |  -0.045769 |    0.051828 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.082023 |   0.06017  |   0.074241 |    0.097607 |     0.048199 |   0.079811 |   0.068784 |    0.007093 |
      |  2 |            2 |      0 | 0.062529 |   0.089182 |   0.079426 |    0.067297 |     0.046945 |   0.043257 |   0.110124 |    0.014082 |
      |  3 |            3 |      0 | 0.047904 |   0.085477 |   0.086283 |    0.263129 |     0.026057 |   0.295514 |   0.084178 |    0.022669 |
      |  4 |            4 |      0 | 0.057181 |   0.047923 |   0.047681 |    0.073854 |     0.03672  |   0.065125 |   0.05351  |    0.003984 |
      |  5 |            5 |      0 | 0.027721 |   0.048017 |   0.041017 |    0.037826 |     0.019132 |   0.029597 |   0.047079 |    0.007302 |
    ''',
  })
# ---
# name: TestRegressionOutputs.test_xgb_regressor_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |    none |    MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|--------:|----------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 | 2.20594 | -0.675157 |   0.062133 |  -0.093517 |    0.12961  |    -0.040851 |  -0.289735 |  -0.56985  |   -0.222993 |
      |  2 |            2 | 2.20594 | -0.526706 |   0.009479 |  -0.47606  |   -0.204358 |     0.018729 |   0.157345 |  -0.213318 |   -0.022373 |
      |  3 |            3 | 2.20594 |  0.509772 |   0.700983 |   0.035686 |   -0.251212 |     0.071497 |   1.1158   |   0.109486 |    0.423542 |
      |  4 |            4 | 2.20594 |  0.378471 |  -0.074383 |  -0.032628 |    0.133872 |    -0.153245 |  -0.235451 |   0.072893 |    0.198188 |
      |  5 |            5 | 2.20594 | -0.445985 |  -0.110396 |  -0.118909 |    0.179782 |     0.134424 |  -0.038472 |   0.054174 |    0.334684 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   MedInc |   HouseAge |   AveRooms |   AveBedrms |   Population |   AveOccup |   Latitude |   Longitude |
      |---:|-------------:|-------:|---------:|-----------:|-----------:|------------:|-------------:|-----------:|-----------:|------------:|
      |  1 |            1 |      0 | 0.013734 |   0.013929 |   0.015019 |    0.014788 |     0.014741 |   0.012818 |   0.012684 |    0.011095 |
      |  2 |            2 |      0 | 0.027093 |   0.029839 |   0.030045 |    0.023152 |     0.02609  |   0.021606 |   0.026735 |    0.030893 |
      |  3 |            3 |      0 | 0.021818 |   0.021139 |   0.024659 |    0.02106  |     0.023295 |   0.01747  |   0.022725 |    0.020437 |
      |  4 |            4 |      0 | 0.010932 |   0.009347 |   0.010853 |    0.009596 |     0.009709 |   0.010285 |   0.010187 |    0.010703 |
      |  5 |            5 |      0 | 0.021477 |   0.021301 |   0.026117 |    0.020262 |     0.021347 |   0.020693 |   0.024354 |    0.021641 |
    ''',
  })
# ---
